Update admin login button to use onclick event

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <input id="loginEmail" type="email" placeholder="Email">
 <input id="loginPassword" type="password" placeholder="Mot de passe">
 <button id="loginUser">Connexion</button>
-<button id="loginAdmin">Connexion ADMIN</button>
+<button onclick="location.href='admin.html'">Connexion ADMIN</button>
 
 <script type="module">
 import { auth, db } from "./js/firebase.js";
@@ -43,8 +43,6 @@ loginUser.onclick = () => {
     .then(() => alert("Connecté"))
     .catch(e => alert(e.message));
 };
-  //LoginAdmin
-  loginAdmin.onclick = location.href='admin.html',
 </script>
 </body>
 </html>
